--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   snake:
-    image: 'devsecops1/devsecops-repo1'
+    image: 'amrit96/snake'
     environment:
       - "PORT:3000"
     ports:
